fix container on mobile device

--- a/alumni-app/css/alumni.css
+++ b/alumni-app/css/alumni.css
@@ -157,9 +157,17 @@ main {
     border: 0;
   }
 
+  .content-container.alert {
+    height: 100%;
+    border: 0;
+  }
+
   .alumni-card {
     padding: 0.5em;
   }
-}
 
-/* Search Bar  */
+  .alert > img {
+    width: 90%;
+    height: auto;
+  }
+}
